Fixed Background line- Background now stretched to fit the container horizontally.

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -33,6 +33,7 @@
 
 .fancy-box {
   background-image: image-url("concrete-small.png");
+  background-size: cover;
   color: white;
   border: 1px solid red;
   padding: 20px 10px 50px 10px;
